Fix: ヘッダーとメニューの z-index を 100 以上に

--- a/components/layout/header.module.scss
+++ b/components/layout/header.module.scss
@@ -15,7 +15,7 @@ $content-padding: ($header-height - $content-height) / 2;
   padding: 0 ($content-padding / 2);
   display: flex;
   align-items: center;
-  z-index: 1;
+  z-index: 100;
   background-color: $color-base;
   box-shadow: 0 -4px 4px 6px $color-shadow;
 }
